test/netlist/error/unbound-unused.bop
A(a, b, d) = c
with unused = (d, my_var)
where
  c = And(a, b);
  myvar = Id(a);
end where;
